# Vault21

./: BlastMenuV3.sln  BlastMenuV3.vcxproj  BlastMenuV3.vcxproj.filters  BuffEntry.h  BuffManager.h  CMakeLists.txt  CObject.cpp  CObject.h  CObjectManager.h  CallBackIntStates.h  Callbacks.cpp  Callbacks.h  Capture.h  DXGICapture.h  Direct3D9Capture.h  DllMain.cpp  Drawings.cpp  Drawings.h  DriverController.cpp  DriverController.h  Engine.cpp  Engine.h  ExampleAppLog.h  FuncHook.h  Globals.h  HeavensGateHook.h  Hooks.h  LICENSE  LUA.cpp  LUA.h  LeagueFunctions.cpp  LeagueFunctions.h  LeagueHooks.cpp  LeagueHooks.h  Misc.h  Offsets.h  Orbwalker.cpp  Orbwalker.h  PIDManager.cpp  PIDManager.h  (+26 more)
Auto-Queue/: Auto-Queue.cpp  Auto-Queue.vcxproj  Auto-Queue.vcxproj.filters  LCUAPI.cpp  LeagueConnector.cpp
Detours/: CMakeLists.txt
HACKUZAN/: BuffManager.h  BuffScript.cpp  BuffScript.h  BuffScriptInstance.h  CharacterDataStack.h  CheckBox.cpp  ClockFacade.h  ComponentBase.h  Config.h  Console.cpp  Console.h  DXGICapture.h  DeviceHandler.h  Direct3D9Capture.cpp  Direct3D9Capture.h  Draw.cpp  Draw.h  DriverController.cpp  DriverController.h  Evade.cpp  EvadeConstants.h  Events.cpp  Experience.h  FuncHook.cpp  FuncHook.h  Functions.cpp  Functions.h  GameClient.cpp  GameObject.cpp  GameObject.h  GameStartData.cpp  Geometry.h  Globals.cpp  Globals.h  HACKUZAN.vcxproj  HACKUZAN.vcxproj.filters  HashFunctions.cpp  HashFunctions.h  HealthPrediction.cpp  Hooks.h  (+56 more)
IDA-LeagueUpdater/: IDA-LeagueUpdater.pyproj
IDA-Py-Tools/: IDA-Py-Tools.pyproj  IDA_Py_Tools.py
ImGui/: CMakeLists.txt  ImGui.vcxproj  ImGui.vcxproj.filters  imgui.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h
Internal/: BuffEntry.cpp  BuffManager.h  CMakeLists.txt  CObject.cpp  CObject.h  CObjectManager.h  Capture.cpp  ClassWrapper.h  DXGICapture.cpp  Direct3D12Capture.h  Direct3D9Capture.cpp  DirectX9.h  DllMain.cpp  Engine.h  ExampleAppLog.h  FuncHook.cpp  Globals.h  HealthPrediction.cpp  HealthPrediction.h  HeavensGateHook.h  ImRenderer.cpp  ImRenderer.h  Internal.vcxproj  Internal.vcxproj.filters  LUA.h  LeagueFunctions.cpp  LeagueFunctions.h  LeagueHooks.cpp  LeagueHooks.h  Misc.cpp  Misc.h  Offsets.h  Orbwalker.cpp  Orbwalker.h  SpellData.h  SpellInfo.h  TargetSelector.cpp  UnitComponentInfo.h  UnitComponentInfoProperties.h  Utils.cpp  (+14 more)
Internal/Framework/: dllmain.cpp
Internal/Kiero/: kiero.cpp
LUA/: lua54.lib
League-Decoder/: League-Decoder.vcxproj  dllmain.cpp
LeagueDebugger/: DllMain.cpp  (+18 more)
(+215 files in other folders)
